@@ -45,6 +45,7 @@
 #include "regcache.h"
 #include "arch-utils.h"
 #include "psymtab.h"
+#include <ctype.h>
 
 /* tcl header files includes varargs.h unless HAS_STDARG is defined,
    but gdb uses stdarg.h, so make sure HAS_STDARG is defined.  */
@@ -86,10 +87,6 @@
          cygwin_conv_to_win32_path (from, to)
 #   define CW_SET_DOS_FILE_WARNING -1	/* no-op this for older Cygwin */
 # endif
-#endif
-
-#ifdef HAVE_CTYPE_H
-#include <ctype.h>		/* for isprint() */
 #endif
 
 #ifdef _WIN32
